# cs2

CSExternal/: CMakeLists.txt
CSExternal/include/CS2SDK/: Entities.h  SDK.h
CSExternal/src/: main.cpp
Common/: CMakeLists.txt
Common/include/: Memory.h  offsets.hpp
Common/src/: Memory.cpp
VACBypass/: CMakeLists.txt
VACBypass/src/: main.cpp
VACLoader/src/: main.cpp
scripts/: update_offsets.py
